# e2b_sandbox_inspector

./: .gitignore  README.md  pyproject.toml
src/e2b_sandbox_inspector/: __init__.py  async_client.py  cli.py  schemas.py  sync_client.py
tests/: __init__.py
