[project]
name = "e2b-sandbox-inspector"
version = "0.1.0"
description = "Debug, monitor, and interact with running E2B sandboxes via CLI and Python API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["e2b", "sandbox", "debugging", "monitoring", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "e2b>=2.8.0",
    "e2b-code-interpreter>=2.4.0",
    "pydantic>=2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
e2b-inspect = "e2b_sandbox_inspector.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.13"

[dependency-groups]
dev = [
    "ty>=0.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/e2b_sandbox_inspector"]

